# Carbon

./: Cargo.toml  README.md
api/src/: features.rs  handler.rs  lib.rs  metadata.rs
app/: Cargo.toml
app/src/: main.rs
app/src/app/: mod.rs
app/src/app/bar/: mod.rs
app/src/app/bar/main/: module.rs
carbon/: Cargo.toml
carbon/src/: lib.rs  main.rs
carbon/src/fei/: core.rs  driver.rs  features.rs  handler.rs  metadata.rs  mod.rs  module.rs  status.rs
modules/chip8/: Cargo.toml
modules/chip8/src/: chip8.rs  lib.rs
modules/crisp/: Cargo.toml
modules/crisp/src/: lib.rs
modules/crisp/src/chip/: core.rs  driver.rs  handler.rs  mod.rs
src/: lib.rs  main.rs
src/console/: mod.rs
src/console/c8/: font.rs  mod.rs  opcode.rs  quirk.rs  registers.rs
src/core/: mod.rs
src/core/console/chip8/: console.rs  driver.rs  mod.rs  quirk.rs
src/core/disasm/: chip8.rs  mod.rs
src/core/rom/: chip8.rs  mod.rs
src/core/ui/: app.rs  mod.rs
src/core/ui/bar/main/: file.rs  mod.rs  tools.rs
src/core/ui/state/: chip.rs  mod.rs
src/core/ui/window/: about.rs  mod.rs  opcode.rs
src/core/ui/window/disassembler/: chip.rs  mod.rs
src/rom/: chip8.rs  mod.rs
