[package]
name = "carbon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
# eframe = "0.22.0"
# egui = "0.22.0"
# egui-phosphor = { version = "0.2.0", features = ["bold"] }
# egui_extras = "0.22.0"
# egui_dock = "0.6.3"
# rand = "0.8.5"
# tinyaudio = "0.1.2"
# rfd = "0.11.4"
