[package]
name = "carbon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = { version = "0.22.0", features = ["persistence"] }
egui-phosphor = { version = "0.2.0", features = ["bold"] }
egui_dock = "0.6.3"
# rfd = "0.11.4"
api = { path = "../api" }